--- a/foto.html
+++ b/foto.html
@@ -10,8 +10,8 @@
     <a href="index.html"><h3>Вернуться на главную страницу</h3></a>
     <div class="foto"><img src="savva.png" style="height: 400px; margin: 0px;"/>
         <img src="r3xYQJH3pls.jpg" style="height: 400px; margin: 0px;"/>
-       
-        
+        <img src="IMG_5714.png" style="height: 400px; margin: 0px;"/>
+        <img src="niLH59JAc1Y.jpg" style="height: 400px; margin: 0px;"/>
     </div>
 </div>
 </body>
