--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <div class="info">
-                <img src="savva.png" style="height: 200px; margin: 0px;"
+                <img src="IMG_5714.png" style="height: 200px; margin: 0px;"
                 class="avatar"/>
                 <div class="infotext"><h1>Злобин Савватий</h1>
                     <p>Я студент вуза <strong>ЛЭТИ</strong>, группа 1372.</p>
